# mdbook-combiner

./: CHANGELOG.md  Cargo.toml  README.md  SUMMARY.md
.github/workflows/: cd.yml  plz_release.yml
src/: main.rs
test/foo/: SUMMARY.md
test/test/: SUMMARY.md.old
